crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__function_definition-2.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"() => 10;\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 9,
                    },
                },
                span: 0..9,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 8,
                            },
                        },
                        span: 0..8,
                        kind: Lambda(
                            Lambda {
                                params: [],
                                body: Expr(
                                    Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 6,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 8,
                                            },
                                        },
                                        span: 6..8,
                                        kind: Lit(
                                            Num(
                                                Num {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 6,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 8,
                                                        },
                                                    },
                                                    span: 6..8,
                                                    value: "10",
                                                },
                                            ),
                                        ),
                                        inferred_type: None,
                                    },
                                ),
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
